# uni_mngr

./: README.md  communicate.py  dummy.py  main.py  prompt.txt  pyproject.toml  test.ipynb  test.py
task/lib/: gost_subscribe.py  subprocess_exec.py  timer.py
task/lib/eye_care/: eye_care.py  prompt
task/lib/uni_panel/: process_manager.py  uni_panel.py
webui/: app.py  project_prompt.txt  terminal_manager.py
webui/templates/: index.html
worker_str_create/: flying.yaml  gost_info  main.py  prepare.bat  prepare生成prompt
