[project]
name = "uni-tool-mangr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "pillow>=11.3.0",
    "pyside6>=6.10.0",
    "requests>=2.32.5",
]
